@@ -24,6 +24,7 @@ Not yet released
 	- Default 'modern' stylesheet now fills the page with the image
 	- Pre-loading of next image (if browser supports it)
 	- Quote CSS url(...) references in case filename contains brackets
+	- Added altitude to modern template
 
 1.1 Sun Aug  5 23:48:30 BST 2012
 
